     - fixed SelectFiles (AddCover, Insert Image) to again use the arrows keys to walk the list
     - fixed some lost or stolen focus issues
     - fix overwriting of existing nav document and cover-image manifest properties
     - fix for Reports column sorting that use thousands group separators


Sigil-2.2.1
   Bug Fixes
     - fix bug introduced by using ClickFocus policy on QToolButtons with menus instead of NoFocus
     - update base.ts for late Preferences tranaslation change missed in the last release
     - update Translations from Transifex
     - fix incorrect std button icon under Fusion for Sigil Preferences Open Preference Folder
     - set default button in the fix doctype/headers dialog on epub load to Yes to match earlier behaviour

     
Sigil-2.2.0
    New Features
      - add support for Windows live switching from dark to light and light to dark modes
      - add support for Linux kde and gtk3 live switching from dark to light and light to dark modes
      - add new environment variable: SIGIL_PREVIEW_TIMEOUT
           (in milliseconds) to allow user control of the Preview updating intervals,
           valid range 100 - 10000.  default value: 1000.  Set only once at Sigil startup.
      - add new Find and Replace targets: Selected SVG files, Selected Javascript Files, and Selected Misc XML
      - add new Find and Replace Regular Expression menu option: Unicode Property (*UCP)
      - add ability to rename files when new name is just a case variant on case insensitive filesystems
      - extended the number of clips that can be assigned to toolbars (total now of 60 clips supported)
      - Accessibility improvements:
          - add abiity to highlight the widget with current focus (Thanks BeckyEbook)
          - add ability to double text insertion point width throughout Sigil
      - Extend Python Plugin Interface with info on preferred font mangling information